tests/frontend/fail/array/create_arg_uninitialised_var.act
contract A

constructor(uint foo)


contract B

constructor()

creates
  A a := new A(x)
  uint x := 0
